--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,44 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": "next/core-web-vitals",
+  "rules": {
+    "indent": ["error", 2],
+    "linebreak-style": ["error", "unix"],
+    "quotes": ["error", "single"],
+    "semi": ["error", "always"],
+    "space-in-parens": ["error"],
+    "space-infix-ops": "error",
+    "object-curly-spacing": ["error", "always"],
+    "comma-spacing": "error",
+    "space-before-function-paren": ["error", "never"],
+    "eol-last": ["error", "always"],
+    "keyword-spacing": [
+      "error",
+      {
+        "before": true,
+        "after": true,
+        "overrides": {
+          "do": { "after": false },
+          "for": { "after": false },
+          "if": { "after": false },
+          "switch": { "after": false },
+          "while": { "after": false },
+          "catch": { "after": false }
+        }
+      }
+    ],
+    "arrow-spacing": [
+      "error",
+      {
+        "before": true,
+        "after": true
+      }
+    ],
+    "array-bracket-spacing": "error",
+    "prefer-const": "error",
+    "no-var": "error",
+    "rest-spread-spacing": "error",
+    "prefer-arrow-callback": "error",
+    "object-shorthand": ["error", "always"],
+    "max-len": "error"
+  }
 }
